--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./publicHTML/styles.css">
         <title>Marbles, Monsters, &amp; Mazes - Home</title>
     </head>
     <body>
@@ -12,8 +12,8 @@
         </header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="journal.html">Development Journal</a>
-            <a href="gallery.html">Gallery</a>
+            <a href="./publicHTML/journal.html">Development Journal</a>
+            <a href="./publicHTML/gallery.html">Gallery</a>
         </nav>
         <section id="journal">
             <h2>April 24th, 2021</h2>
