--- a/publicHTML/gallery.html
+++ b/publicHTML/gallery.html
@@ -12,7 +12,7 @@
         </header>
 
         <nav>
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="journal.html">Development Journal</a>
             <a href="gallery.html">Gallery</a>
         </nav>
