--- a/publicHTML/journal.html
+++ b/publicHTML/journal.html
@@ -11,7 +11,7 @@
             <p class="author">by Sean Kirkpatrick, All Rights Reserved</p>
         </header>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="journal.html">Development Journal</a>
             <a href="gallery.html">Gallery</a>
         </nav>
