dev journal entries, backpack placeholder, marble has 8x directional rolling
-renamed demo videos
-updated website with journal content.
-changed game UI to include KeyChain and Backpack
-marble rolls in 8 directions
-added about page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             <a href="index.html">Home</a>
             <a href="./publicHTML/journal.html">Development Journal</a>
             <a href="./publicHTML/gallery.html">Gallery</a>
+            <a href="about.html">About</a>
         </nav>
         <section id="Intro">
-            <p></p>
+            <p>Better write something good here!</p>
         </section>
         <section id="journal">
             <h2>April 24th, 2021</h2>
