--- a/publicHTML/gallery.html
+++ b/publicHTML/gallery.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <h1>Marbles, Monsters, &amp; Mazes - Gallery</h1>
-            <p class="subTitle">A </p>
+            <p class="subTitle"></p>
             <p class="author">by Sean Kirkpatrick, All Rights Reserved</p>
         </header>
 
@@ -15,6 +15,7 @@
             <a href="../index.html">Home</a>
             <a href="journal.html">Development Journal</a>
             <a href="gallery.html">Gallery</a>
+            <a href="about.html">About</a>
         </nav>
 
         <section>
