--- a/publicHTML/about.html
+++ b/publicHTML/about.html
@@ -18,13 +18,14 @@
         </nav>
         <section>
             <article id="author">
-                
+                <h2>It Me!</h2>
+                <p>Sean Kirkpatrick (he/him) is a Vietnamese-American queer anti-capitalist anarchist from Ohio.  He moved to Portland, OR in 2008, ignorant of the deeply racist history of the state, but excited by the coffee shops and bicycle infrastructure.  His interests vary from rock climbing and guitar playing to folding origami and cultivating bonsai.  With a software career ranging from industrial HMI and database development to scientific instrument firmware prototyping, he is much more a jack-of-all-trades than a specialist.</p>
             </article>
             <article id="tools">
                 <h2>Software Tools</h2>
                 <ol>
                     <li>
-                        Unity 2020.2+ - The do basically everything engine for multiple platforms.  I considered godot (because I’m primarily interested in making 2d games) and Unreal Engine (because it’s so goddamn beautiful), but Unity has better licensing for my expected level of sales (that is, not that much)
+                        Unity 2020.2+ - The do basically everything engine for multiple platforms.  I considered godot (because I’m primarily interested in making 2d games) and Unreal Engine (because it’s so goddamn beautiful), but Unity has better licensing for my expected level of sales (that is, not very much)
                         <ul>
                             <li>
                                 Packages:
@@ -59,5 +60,10 @@
 
             </article>
         </section>
+        <footer>
+            <p>Sean Kirkpatrick, All Rights Reserved 2020-2021</p>
+
+            <p>This game and site are both works in progress!  It's just me, so it'll be a while...</p>
+        </footer>
     </body>
 </html>
