--- a/publicHTML/gallery.html
+++ b/publicHTML/gallery.html
@@ -25,7 +25,9 @@
         </section>
 
         <footer>
-            <p>Sean Kirkpatrick, All Rights Reserved</p>
+            <p>Sean Kirkpatrick, All Rights Reserved 2020-2021</p>
+
+            <p>This game and site are both works in progress!  It's just me, so it'll be a while...</p>
         </footer>
     </body>
 </html>
